# reagent

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
dashboard/src/: App.jsx  index.css
dashboard/src/api/: client.js  mockData.js
dashboard/src/components/: CodeBlock.jsx  ErrorPanel.jsx  Header.jsx  Layout.jsx  Pagination.jsx  PlaybackControls.jsx  ReplayGraph.jsx  RunCard.jsx  RunTable.jsx  SearchBar.jsx  Sidebar.jsx  StateInspector.jsx  StatsCard.jsx  StatusBadge.jsx  StatusBar.jsx  StepDetailPanel.jsx  TabBar.jsx  TimelineBar.jsx  TraceGraph.jsx
dashboard/src/components/graph/: ErrorNode.jsx  LLMNode.jsx  RetrievalNode.jsx  ToolNode.jsx  nodeTypes.js
dashboard/src/hooks/: useAutoRefresh.js  useReplayEngine.js  useReplayKeyboard.js
dashboard/src/pages/: Failures.jsx  Overview.jsx  ReplayPlayer.jsx  RunRedirect.jsx  RunView.jsx  Runs.jsx  Search.jsx  TraceInspect.jsx
dashboard/src/stores/: replayStore.js  runStore.js  traceStore.js
demo/: agent.py  scenarios.py  tools.py  usage.md
deploy/helm/reagent-server/: Chart.yaml  values.yaml
deploy/helm/reagent-server/templates/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
docs/: api-reference.md  deployment-guide.md
examples/: failure_demo.py
src/reagent/: __init__.py
src/reagent/adapters/: __init__.py  base.py  crewai.py  langchain.py  llamaindex.py  manual.py  openai.py  openai_agents.py
src/reagent/alerts/: __init__.py  delivery.py  engine.py  rules.py
src/reagent/analysis/: __init__.py  cost.py  diff.py  drift.py  loop_detector.py  ordering.py  search.py
src/reagent/classification/: __init__.py  classifier.py  features.py  ml_classifier.py
src/reagent/cli/: __init__.py  debugger.py  formatters.py  history.py  main.py
src/reagent/cli/commands/: config_cmd.py  diff_cmd.py  export_cmd.py  failures_cmd.py  inspect_cmd.py  list_cmd.py  replay_cmd.py  server_cmd.py
src/reagent/cli/templates/: viewer.html
src/reagent/client/: __init__.py  buffer.py  context.py  reagent.py  transport.py
src/reagent/core/: __init__.py  config.py  constants.py  exceptions.py
src/reagent/export/: csv.py  langfuse.py  otlp.py
src/reagent/redaction/: __init__.py  engine.py  nlp.py  patterns.py  rules.py
src/reagent/replay/: __init__.py  determinism.py  engine.py  executor.py  loader.py  sandbox.py  session.py
src/reagent/schema/: __init__.py  events.py  run.py  steps.py
src/reagent/server/: __init__.py  app.py  auth.py  config.py  deps.py
src/reagent/server/routes/: __init__.py  failures.py  health.py  ingest.py  runs.py  search.py  stats.py
src/reagent/storage/: __init__.py  base.py  jsonl.py  memory.py  remote.py  sqlite.py
tests/: __init__.py  conftest.py
tests/component/: __init__.py  test_client.py  test_redaction.py  test_storage.py
tests/integration/: __init__.py  test_adapters_remote.py  test_full_cycle.py  test_remote_mode.py
tests/unit/: __init__.py  test_alerts.py  test_async_ordering.py  test_classification.py  test_config.py  test_cost.py  test_csv_export.py  test_debugger.py  test_debugger_history.py  test_drift_detection.py  test_exceptions.py  test_langfuse_export.py  test_loop_detector.py  test_ml_classifier.py  test_nlp_redaction.py  test_openai_agents_adapter.py  test_otlp_export.py  test_partial_replay.py  test_remote_storage.py  test_remote_transport.py  test_schema.py  test_server_config.py  test_structured_search.py
